hphp/test/zend/good/Zend/tests/closure_012.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: i' in %s/closure_012.php:4
Stack trace:
%A
